# musicpp

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
src/: main.cpp
src/loopback/: Loopback.cpp  Loopback.h
src/visualizer/: BarVisualizer.cpp  LineVisualizer.cpp
